scrollbar breaks popup and fixed header

--- a/customGO.css
+++ b/customGO.css
@@ -11999,110 +11999,10 @@ body.no-scroll {
     position: relative;
     background: white;
     border: 1px solid black;
-    scrollbar-width: 10px;
-    scrollbar-color: #00BCD4;
 }
 
 .table-scroll-container--x-only {
     overflow-y: auto !important;
-}
-
-/* .table-scroll-container::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width:10px;
-    height: 10px;
-}
-
-.table-scroll-container::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    background-color: #00BCD4;
-    color: #00BCD4;
-    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
-}
-.table-scroll-container::-webkit-scrollbar-track,
-.table-scroll-container::-webkit-scrollbar-corner {
-    background-color: white;
-    border-left: 1px solid black;
-    border-top: 1px solid black;
-} */
-
-/*IE*/
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-    .table-scroll-container {
-        margin-right: -10px;
-        padding-top: 32px;
-        margin-top: -32px;
-        margin-bottom: -32px;
-        padding-bottom: 32px;
-
-        /* ie scrollbar color properties */
-        scrollbar-base-color: #ffffff;
-        scrollbar-face-color: #00BCD4;
-        scrollbar-3dlight-color: #00BCD4;
-        scrollbar-highlight-color: #00BCD4;
-        scrollbar-track-color: transparent;
-        scrollbar-arrow-color: #00BCD4;
-        scrollbar-shadow-color: #00BCD4;
-        scrollbar-dark-shadow-color: #00BCD4;
-    }
-
-    .table-scroll-container:after {
-        content: "";
-        height: 32px;
-        display: block;
-    }
-
-}
-
-/*Edge*/
-@supports (-ms-ime-align:auto)  {
-.table-scroll-container {
-        margin-right: -10px;
-        padding-top: 16px;
-        margin-top: -16px;
-        margin-bottom: -16px;
-        padding-bottom: 16px;
-}
-
-.table-scroll-container:after {
-    content: "";
-    height: 16px;
-    display: block;
-}
-}
-
-/*Firefox*/
-/*From version 64 - https://drafts.csswg.org/css-scrollbars-1/*/
-.table-scroll-container {
-    -webkit-appearance: none;
-    -moz-appearance: none !important;
-    scrollbar-width: 10px;
-    scrollbar-color: #00BCD4 transparent !important;
-}
-
-
-/*Chrome*/
-.table-scroll-container::-webkit-scrollbar-track {
-    background-color: transparent;
-    width: 4px;
-    -webkit-appearance: none;
-    -moz-appearance: none !important;
-}
-
-.table-scroll-container::-webkit-scrollbar-thumb {
-    background-color: #00BCD4;
-    border: 1px solid transparent;
-    background-clip: content-box;
-    border-radius: 5px;
-    -webkit-appearance: none;
-    -moz-appearance: none !important;
-}
-
-.table-scroll-container::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-    -webkit-appearance: none;
-    -moz-appearance: none !important;
 }
 
 .floatThead-wrapper { cursor: pointer; }
@@ -12216,3 +12116,219 @@ div.topic table.table th.entry .p.rotate-text{
     display: inline;
     transform: none;
 }
+
+/* SIMPLEBAR CSS */
+
+[data-simplebar] {
+    position: relative;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .simplebar-wrapper {
+    overflow: hidden;
+    width: inherit;
+    height: inherit;
+    max-width: inherit;
+    max-height: inherit;
+  }
+
+  .simplebar-mask {
+    direction: inherit;
+    position: absolute;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: auto !important;
+    height: auto !important;
+    z-index: 0;
+  }
+
+  .simplebar-offset {
+    direction: inherit !important;
+    box-sizing: inherit !important;
+    resize: none !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    padding: 0;
+    margin: 0;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .simplebar-content-wrapper {
+    direction: inherit;
+    box-sizing: border-box !important;
+    position: relative;
+    display: block;
+    height: 100%; /* Required for horizontal native scrollbar to not appear if parent is taller than natural height */
+    width: auto;
+    visibility: visible;
+    max-width: 100%; /* Not required for horizontal scroll to trigger */
+    max-height: 100%; /* Needed for vertical scroll to trigger */
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .simplebar-content-wrapper::-webkit-scrollbar,
+  .simplebar-hide-scrollbar::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+
+  .simplebar-content:before,
+  .simplebar-content:after {
+    content: ' ';
+    display: table;
+  }
+
+  .simplebar-placeholder {
+    max-height: 100%;
+    max-width: 100%;
+    width: 100%;
+    pointer-events: none;
+  }
+
+  .simplebar-height-auto-observer-wrapper {
+    box-sizing: inherit !important;
+    height: 100%;
+    width: 100%;
+    max-width: 1px;
+    position: relative;
+    float: left;
+    max-height: 1px;
+    overflow: hidden;
+    z-index: -1;
+    padding: 0;
+    margin: 0;
+    pointer-events: none;
+    flex-grow: inherit;
+    flex-shrink: 0;
+    flex-basis: 0;
+  }
+
+  .simplebar-height-auto-observer {
+    box-sizing: inherit;
+    display: block;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 1000%;
+    width: 1000%;
+    min-height: 1px;
+    min-width: 1px;
+    overflow: hidden;
+    pointer-events: none;
+    z-index: -1;
+  }
+
+  .simplebar-track {
+    z-index: 1;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    pointer-events: none;
+    overflow: hidden;
+    background: white;
+  }
+
+  [data-simplebar].simplebar-dragging .simplebar-content {
+    pointer-events: none;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+
+  [data-simplebar].simplebar-dragging .simplebar-track {
+    pointer-events: all;
+  }
+
+  .simplebar-scrollbar {
+    position: absolute;
+    left: 0;
+    right: 0;
+    min-height: 10px;
+  }
+
+  .simplebar-scrollbar:before {
+    position: absolute;
+    content: '';
+    background: #00BCD4;
+    border-radius: 7px;
+    left: 2px;
+    right: 2px;
+    opacity: 1;
+    transition: opacity 0.2s linear;
+  }
+
+  .simplebar-scrollbar.simplebar-visible:before {
+    /* When hovered, remove all transitions from drag handle */
+    opacity: 1;
+    transition: opacity 0s linear;
+  }
+
+  .simplebar-track.simplebar-vertical {
+    top: 0;
+    width: 11px;
+  }
+
+  .simplebar-track.simplebar-vertical .simplebar-scrollbar:before {
+    top: 2px;
+    bottom: 2px;
+  }
+
+  .simplebar-track.simplebar-horizontal {
+    left: 0;
+    height: 11px;
+  }
+
+  .simplebar-track.simplebar-horizontal .simplebar-scrollbar:before {
+    height: 100%;
+    left: 2px;
+    right: 2px;
+  }
+
+  .simplebar-track.simplebar-horizontal .simplebar-scrollbar {
+    right: auto;
+    left: 0;
+    top: 2px;
+    height: 7px;
+    min-height: 0;
+    min-width: 10px;
+    width: auto;
+  }
+
+  /* Rtl support */
+  [data-simplebar-direction='rtl'] .simplebar-track.simplebar-vertical {
+    right: auto;
+    left: 0;
+  }
+
+  .hs-dummy-scrollbar-size {
+    direction: rtl;
+    position: fixed;
+    opacity: 0;
+    visibility: hidden;
+    height: 500px;
+    width: 500px;
+    overflow-y: hidden;
+    overflow-x: scroll;
+  }
+
+  .simplebar-hide-scrollbar {
+    position: fixed;
+    left: 0;
+    visibility: hidden;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
